# alpha_screener

./: .coderabbit.yaml  .env.template  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  pyproject.toml
.ai/agents/: code-reviewer.md  issue-triage.md
.ai/prompts/: code-review.md  issue-triage.md
.claude/: settings.json
.claude/hooks/: block-dangerous-git.sh
.claude/skills/pr-workflow/: SKILL.md  TROUBLESHOOTING.md
.github/ISSUE_TEMPLATE/: bug.yml  enhancement.yml
.github/workflows/: ai-changelog.yml  ai-issue-agent.yml  auto-approve.yml  auto-merge.yml  test.yml
alphascreener/: __init__.py  cli.py  config.py  db.py  types.py
alphascreener/adapters/: __init__.py  stooq_adapter.py  yfinance_adapter.py
alphascreener/core/: __init__.py  backtest.py  cost.py  factors.py  llm_dag.py  rate_limiter.py  refined.py  screening.py  storage.py  universe.py
docs/adr/: 0001-llm-as-risk-audit-layer.md  0002-freeze-factor-weights-in-mvp.md  0003-backtrader-over-vectorbt.md  0004-dual-data-source-validation.md
docs/prds/: alpha_screener_prd.md
scripts/: auto-approve.sh  close-reopen.sh  watch-pr.sh
tests/: conftest.py  test_backtest.py  test_cli.py  test_config.py  test_cost.py  test_db.py  test_factors.py  test_llm_dag.py  test_refined_types.py  test_screening.py  test_stooq_adapter.py  test_storage.py  test_types.py  test_yfinance_adapter.py
